# zanzipy

./: .gitignore  .mise.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: document_drive.py  document_drive_flask_sqlalchemy.py  document_drive_sqlalchemy.py  document_drive_sqlalchemy_and_dsl.py  document_drive_sqlalchemy_and_mixins.py
src/zanzipy/: __init__.py  client.py  engine_integration.py
src/zanzipy/dsl/: __init__.py  builder.py
src/zanzipy/engine/: _rewrite_dispatch.py  authorization.py  checker.py  expanded_subjects.py  expander.py  lookup.py  resolver.py
src/zanzipy/integration/: decorators.py  mixins.py
src/zanzipy/models/: __init__.py  _parse.py  check.py  errors.py  filter.py  id.py  identifier.py  lookup.py  namespace.py  object.py  relation.py  subject.py  tuple.py
tests/client_tests/: client_test.py  revisioned_client_test.py
tests/dsl_tests/: builder_test.py
tests/engine_tests/: authorization_test.py  checker_test.py  evaluation_schema_validation_test.py  expanded_subjects_test.py  expander_test.py  lookup_parity_test.py  lookup_test.py  resolver_test.py  revision_engine_test.py  rewrite_dispatch_test.py
tests/integration_tests/: decorators_test.py  dsl_builder_test.py  engine_integration_test.py  flask_zanzibar_test.py  mixins_test.py  proxy_test.py
tests/model_tests/: check_test.py  filter_test.py  fixtures.py  id_test.py  identifier_test.py  namespace_test.py  object_test.py  relation_test.py  subject_test.py  tuple_test.py
tests/schema_tests/: compiled_model_test.py  namespaced_test.py  permissions_test.py  registry_test.py  relations_test.py  rules_test.py  subjects_test.py
tests/storage_tests/: redis_rules_test.py  revision_test.py
tickets/: reviewer-notes-zanzibar-004.md
tickets/security/: 001-exclusion-depth-fail-open.md  002-evaluation-trusts-schema-invalid-tuples.md  003-empty-relation-widens-subject-reference.md  004-falsy-rewrite-becomes-direct-relation.md  005-expand-wildcard-set-algebra-diverges.md  006-delete-skips-schema-validation.md  007-watch-stream-order-can-diverge.md  008-redis-cache-failures-are-authoritative.md  009-sqlalchemy-partial-index-dialect-assumption.md  010-mixin-get-permissions-mixes-revisions.md
(+44 files in other folders)
